// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FloatingAdminMenu (Diamond Snapshot) > admin menüsü açıldığında butonlar doğru görünmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100] origin-bottom-right"
    style="transform: scale(0.95);"
  >
    <div
      class="flex flex-col items-center p-1 bg-white/70 backdrop-blur-3xl border border-white/40 shadow-[0_20px_50px_rgba(0,0,0,0.15)] rounded-xl transition-all duration-200 ease-in-out overflow-hidden w-[110px]"
    >
      <div
        class="w-full flex flex-col items-center overflow-hidden"
        style="opacity: 0; height: 0px;"
      >
        <div
          class="flex flex-col gap-1 items-center w-full py-1 px-0.5"
        >
          <div
            class="flex flex-col gap-1 items-center w-full"
          >
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-sm rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-full !col-span-2 !rounded-lg mb-1 w-full !justify-start px-2 gap-2 h-[40px] !bg-stone-50/80 !border-stone-100 hover:!bg-white hover:shadow-md transition-all
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 flex items-center justify-center text-stone-900"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-tags w-full h-full p-0.5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.172 2a2 2 0 0 1 1.414.586l6.71 6.71a2.4 2.4 0 0 1 0 3.408l-4.592 4.592a2.4 2.4 0 0 1-3.408 0l-6.71-6.71A2 2 0 0 1 6 9.172V3a1 1 0 0 1 1-1z"
                      />
                      <path
                        d="M2 7v6.172a2 2 0 0 0 .586 1.414l6.71 6.71a2.4 2.4 0 0 0 3.191.193"
                      />
                      <circle
                        cx="10.5"
                        cy="6.5"
                        fill="currentColor"
                        r=".5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="
          
          
        "
                >
                  <div
                    class="flex-1 min-w-0 overflow-hidden text-left"
                  >
                    <div
                      class="
        overflow-hidden whitespace-nowrap 
        text-[8px] font-black uppercase tracking-tighter text-stone-900 
        
      "
                    >
                      <span>
                        TOPLU İŞLEM
                      </span>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-1 justify-items-center w-full px-0.5"
          >
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-sm rounded-lg  w-full h-[46px] !p-0 transition-all !bg-stone-50/80 !border-stone-100 hover:!bg-white hover:shadow-md
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus w-full h-full p-0.5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="3"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-sm rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-full h-[46px] !p-0 transition-all !bg-stone-50/80 !border-stone-100 hover:!bg-white hover:shadow-md
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-image"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="18"
                        rx="2"
                        ry="2"
                        width="18"
                        x="3"
                        y="3"
                      />
                      <circle
                        cx="9"
                        cy="9"
                        r="2"
                      />
                      <path
                        d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-sm rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-full h-[46px] !p-0 transition-all !bg-stone-50/80 !border-stone-100 hover:!bg-white hover:shadow-md
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-full h-full flex items-center justify-center"
                  >
                    <span
                      class="text-[20px] font-medium leading-none text-stone-900"
                    >
                      ₺
                    </span>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-sm rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-full h-[46px] !p-0 transition-all !bg-stone-50/80 !border-stone-100 hover:!bg-white hover:shadow-md
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-settings2 lucide-settings-2 w-full h-full p-0.5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14 17H5"
                      />
                      <path
                        d="M19 7h-9"
                      />
                      <circle
                        cx="17"
                        cy="17"
                        r="3"
                      />
                      <circle
                        cx="7"
                        cy="7"
                        r="3"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full p-0.5"
      >
        <button
          aria-label="Menüyü Kapat"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        
              !bg-white !text-stone-900 border-stone-100 
              hover:scale-[1.02] active:scale-95 transition-all h-12 w-full shadow-lg rounded-lg relative overflow-hidden
            
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-2.5 w-full h-full px-1"
            >
              <span
                class="text-[11px] font-black uppercase tracking-tight leading-none"
              >
                AYARLAR
              </span>
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x w-full h-full p-0.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FloatingAdminMenu (Diamond Snapshot) > admin menüsü kilitli tasarım snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100] origin-bottom-right"
    style="transform: scale(0.95);"
  >
    <div
      class="flex flex-col items-center p-1 bg-white/70 backdrop-blur-3xl border border-white/40 shadow-[0_20px_50px_rgba(0,0,0,0.15)] rounded-xl transition-all duration-200 ease-in-out overflow-hidden w-[110px]"
    >
      <div
        class="w-full p-0.5"
      >
        <button
          aria-label="Menüyü Aç"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        
              !bg-stone-900 !text-white border-transparent 
              hover:scale-[1.02] active:scale-95 transition-all h-12 w-full shadow-lg rounded-lg relative overflow-hidden
            
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-2.5 w-full h-full px-1"
            >
              <span
                class="text-[11px] font-black uppercase tracking-tight leading-none"
              >
                AYARLAR
              </span>
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-settings2 lucide-settings-2 w-full h-full p-0.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 17H5"
                  />
                  <path
                    d="M19 7h-9"
                  />
                  <circle
                    cx="17"
                    cy="17"
                    r="3"
                  />
                  <circle
                    cx="7"
                    cy="7"
                    r="3"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
